visibility causes issues on helpbox

--- a/bin/clientstyle.css
+++ b/bin/clientstyle.css
@@ -116,5 +116,5 @@ li {
 }
 
 ::-webkit-scrollbar { 
-	visibility: hidden; 
+	display: none; 
 }
